tests/snapshots/integration__graph_event_push.snap
---
source: tests/integration.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_1__push[".github/workflows/ci.yml<br/>CI"]
end
wf_0[".github/workflows/build.yml<br/>Build"]
act_0[".github/actions/setup<br/>Setup"]
ext_0["actions/checkout@v4"]
wf_0 --> act_0
wf_0 --> ext_0
wf_1__push --> act_0
wf_1__push --> ext_0
wf_1__push --> wf_0
