tests/snapshots/integration__graph_markdown.snap
---
source: tests/integration.rs
expression: out
---
### Graph

```mermaid
%% generated by ravelact
graph LR
subgraph push
  wf_1__push[".github/workflows/ci.yml<br/>CI"]
end
subgraph pull_request
  wf_1__pull_request[".github/workflows/ci.yml<br/>CI"]
end
subgraph workflow_dispatch
  wf_2__workflow_dispatch[".github/workflows/dispatch.yml<br/>Dispatch"]
end
wf_0[".github/workflows/build.yml<br/>Build"]
act_0[".github/actions/setup<br/>Setup"]
ext_0["actions/checkout@v4"]
wf_0 --> act_0
wf_0 --> ext_0
wf_1__pull_request --> act_0
wf_1__pull_request --> ext_0
wf_1__pull_request --> wf_0
wf_1__push --> act_0
wf_1__push --> ext_0
wf_1__push --> wf_0
```
