tests/snapshots/integration__graph_markdown_event_unmatched.snap
---
source: tests/integration.rs
expression: out
---
### Graph

```mermaid
%% generated by ravelact
graph LR
%% (no entry-point matches event nonexistent_event_xyz)
```
